[tool.poetry]
name = "live-stablediffusion"
version = "0.1.0"
description = ""
authors = ["Fajri Kornel <fajri.apk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.26.3"
transformers = "^4.38.2"
torch = "^2.2.1"
accelerate = "^0.27.2"
pillow = "^10.2.0"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
